--- a/public/Pages/payment_page.html
+++ b/public/Pages/payment_page.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confirm Payment</title>
-    <link rel="stylesheet" href="/../styles/payment.css">
+    <link rel="stylesheet" href="../styles/payment.css">
 </head>
 <body>
     <div class="body">
@@ -37,7 +37,7 @@
             </div>
         </div>
     </div>
-    <script src="/../script/Payment_Script.js">
+    <script src="../script/Payment_Script.js">
     </script>
 </body>
 </html>
