--- a/public/Pages/fail.htm
+++ b/public/Pages/fail.htm
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="title">Payment Cancelled!</title>
-    <link rel="stylesheet" href="/../styles/payment.css">
+    <link rel="stylesheet" href="../styles/payment.css">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
             </div>
         </div>
     </div>
-    <script src="/../script/success.js">
+    <script src="../script/success.js">
         document.getElementsByClassName("active")[0].innerHTML="Cancelled";
         document.getElementsByClassName("active")[0].style.color="#e25e59";
         document.getElementsByClassName("active")[0].style.backgroundColor="#fbf0f0";
