--- a/public/Pages/register.html
+++ b/public/Pages/register.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="/../styles/login.css">
+    <link rel="stylesheet" href="../styles/login.css">
 </head>
 
 <body>
@@ -26,7 +26,7 @@
                 <br>
                 <button type="submit" id = "submit">Register</button>
             </form>
-            <p style="margin-top: 20px;">Already have an account? <a href="/login.htm" style="text-decoration: none;">Login</a></p>
+            <p style="margin-top: 20px;">Already have an account? <a href="login.htm" style="text-decoration: none;">Login</a></p>
         </div>
     </div>
 </body>
