--- a/public/Pages/Plans/Monthly.htm
+++ b/public/Pages/Plans/Monthly.htm
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Subscription</title>
-    <link rel="stylesheet" href="/../../styles/payscale.css">
+    <link rel="stylesheet" href="../../styles/payscale.css">
 </head>
 
 <body>
