--- a/public/Pages/Plans/Monthly.htm
+++ b/public/Pages/Plans/Monthly.htm
@@ -57,6 +57,6 @@
             <input type="submit" class="submit" value="Submit" onclick="submit()">
         </div>
     </div>
-    <script src="/../../script/Monthly.js"></script>
+    <script src="../../script/Monthly.js"></script>
 </body>
 </html>
