--- a/public/Pages/Plans/Yearly.htm
+++ b/public/Pages/Plans/Yearly.htm
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Subscription</title>
-    <link rel="stylesheet" href="/../../styles/payscale.css">
+    <link rel="stylesheet" href="../../styles/payscale.css">
 </head>
 
 <body>
@@ -57,6 +57,6 @@
             <button type="submit" class="submit">Next</button>
         </div>
     </div>
-    <script src="/../../script/Monthly.js"></script>
+    <script src="../../script/Monthly.js"></script>
 </body>
 </html>
